--- a/tasks.json
+++ b/tasks.json
@@ -2,63 +2,63 @@
   "tasks": [
     {
       "task": "ОБНОВИТЬ ЛИДЫ В ТАБЛИЦЕ ВЫПОЛНЕНИЯ ПЛАНОВ 🔍",
-      "interval_hours": 1
+      "interval_minutes": 1
     },
     {
       "task": "ПРОВЕРИТЬ РК С АВТОСТРАТЕГИЕЙ НА ОСТАНОВКУ ОБУЧЕНИЯ 🔍",
-      "interval_hours": 3
+      "interval_minutes": 3
     },
     {
       "task": "ОЦЕНИТЬ ЭФФЕКТИВНОСТЬ РК ЗА НЕДЕЛЮ 📊",
-      "interval_hours": 4
+      "interval_minutes": 2
     },
     {
       "task": "ПРОВЕРИТЬ ИНТЕГРАЦИЮ, ФОРМЫ И ПОДМЕНУ НА САЙТЕ 🖥️",
-      "interval_hours": 9
+      "interval_minutes": 9
     },
     {
       "task": "ПРОВЕРИТЬ ДИНАМИЧЕСКИЙ ПУЛ НОМЕРОВ В КТ 📞",
-      "interval_hours": 10
+      "interval_minutes": 10
     },
     {
       "task": "ПОЧИСТИТЬ ПОИСКОВЫЕ ЗАПРОСЫ 🧹",
-      "interval_hours": 11
+      "interval_minutes": 11
     },
     {
       "task": "ПРОАНАЛИЗИРОВАТЬ КАЧЕСТВО СЕТЕВОГО ТРАФИКА 📈",
-      "interval_hours": 12
+      "interval_minutes": 12
     },
     {
       "task": "ПОЧИСТИТЬ СЕТЕВЫЕ ПЛОЩАДКИ (ДИРЕКТ) 🧼",
-      "interval_hours": 13
+      "interval_minutes": 13
     },
     {
       "task": "ПОЧИСТИТЬ СЕТЕВЫЕ ПЛОЩАДКИ (МЕДИЙКА) 🧽",
-      "interval_hours": 14
+      "interval_minutes": 14
     },
     {
       "task": "ПРОВЕСТИ АУДИТ LITE 🔎",
-      "interval_hours": 15
+      "interval_minutes": 15
     },
     {
       "task": "ПРОВЕРИТЬ БИБЛИОТЕКУ РЕТАРГЕТИНГА НА НАЛИЧИЕ НЕРАБОТАЮЩИХ СЕГМЕНТОВ 🎯",
-      "interval_hours": 16
+      "interval_minutes": 16
     },
     {
       "task": "ПРОВЕРИТЬ НАЛИЧИЕ ПРОМОАКЦИИ В РК 🏷️",
-      "interval_hours": 17
+      "interval_minutes": 17
     },
     {
       "task": "ПРОВЕРИТЬ НАЛИЧИЕ ВИЗИТКИ В РК 📇",
-      "interval_hours": 18
+      "interval_minutes": 18
     },
     {
       "task": "АКТУАЛИЗИРОВАТЬ КОРРЕКТИРОВКИ 🔄",
-      "interval_hours": 30
+      "interval_minutes": 30
     },
     {
       "task": "ПРОАНАЛИЗИРОВАТЬ БРЕНД (КАЧЕСТВО, СЕМАНТИКА, МИНУСА) 🔬",
-      "interval_hours": 30
+      "interval_minutes": 30
     }
   ]
 }
